hphp/hack/test/typecheck/like_types/dynamic_coercion/enforceable_generic_collision.php.exp
File "enforceable_generic_collision.php", line 14, characters 5-6:
Invalid argument (Typing[4110])
File "enforceable_generic_collision.php", line 7, characters 12-17:
Expected int
File "enforceable_generic_collision.php", line 13, characters 3-9:
But got dynamic
