hphp/hack/test/typecheck/like_types/dynamic_coercion/enforceable_generic_collision.php
<?hh

// This tests to make sure that the typedef's generics are put in the environment
type X<Tcollide> = Tcollide;
type Y<Tignore> = int;

function f(X<int> $x): void {}

function g(Y<null> $y): void {}

function test<
  <<__Enforceable>> reify Tcollide
>(dynamic $d): void {
  f($d); // error
  g($d);
}
